--- a/src/ua/obolon/ponovoy/fx/Main.fxml
+++ b/src/ua/obolon/ponovoy/fx/Main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="409.0" prefWidth="934.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.in.fx.MainController">
+<AnchorPane id="AnchorPane" prefHeight="409.0" prefWidth="934.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.obolon.ponovoy.fx.MainController">
    <children>
       <TableView fx:id="historyTableView" prefHeight="409.0" prefWidth="435.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="0.0">
         <columns>
